# cnftools

./: .clang_complete  .editorconfig  .gitignore  CMakeLists.txt  Main.cc  Makefile  README.md  gbdlib.cc  install-pymod.sh  setup.py
lib/cxxopts/: cxxopts.hpp
src/: GBDHash.h  Main.cc  Normalize.h  Optimize.h  StreamBuffer.h  gbdlib.cc
src/features/: CNFStats.h  GateStats.h  Util.h
src/gates/: AIGProblem.h  BlockList.h  CMakeLists.txt  GateAnalyzer.h  GateBuilder.h  GateDFSTraversal.h  GateFormula.h  GateStats.h  MiterDetector.cc  MiterDetector.h  OccurrenceList.h
src/transform/: IndependentSet.h
src/util/: CMakeLists.txt  CNFFormula.h  CNFStats.h  Runtime.h  SolverTypes.h  Stamp.h
